[dyninst/irgen] Test irgen with inlined functions

--- a/pkg/dyninst/irgen/testdata/snapshot/simple.yaml
+++ b/pkg/dyninst/irgen/testdata/snapshot/simple.yaml
@@ -16,3 +16,7 @@ probes:
   type: LOG_PROBE
   where:
     method_name: main.stringArg
+- id: e
+  type: LOG_PROBE
+  where:
+    method_name: main.inlined
